# duo-rag

./: CHANGELOG.md  PYPI_READINESS_PLAN.md  README.md  pyproject.toml
examples/: eval_tests.yaml  example_usage.py
src/meta_rag/: __init__.py  prompts.py  schema.py
src/meta_rag/ingestion/: pipeline.py
src/meta_rag/query/: pipeline.py
src/meta_rag/stores/: base.py  relational.py
tests/: test_ingestion.py  test_prompts.py  test_schema_evolution.py
