[project]
name = "meta-rag"
version = "0.1.1"
description = "Extends RAG with structured query capabilities using dual vector + relational storage"
readme = "README.md"
authors = [
    { name = "Cagri Yucel", email = "cagri@instant-ps.com" }
]
requires-python = ">=3.11"
dependencies = [
    "openai",
    "chromadb",
    "python-dotenv",
]

[dependency-groups]
dev = [
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
